# spectra

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MEMORY-LAYER-PLAN.md  PLAN.md  README.md  TODO.md  USER_PROMPT.md  biome.json  check_pyo3.bat  package.json  pnpm-lock.yaml  scratch.diff  trace_detail.py  trace_query.py  turbo.json
.changeset/: 2026-06-05-2010-expand-system-prompt.md  2026-06-05-2018-fix-version-display.md  alklnqsb.md  audit-provenance.md  config.json  fresh-start-0-4-0.md  ga33ijzk.md  patch-model-scatter.md  patch-thinking-echo-back.md  repair-missing-tool-results.md  rxcfqpwj-fix2.md  ryzkshgu-fix.md  shy-bottles-relate.md  six-days.md  thinking-effort.md  tiny-dodos-jam.md  v051-release.md  zg4zyp40.md
.github/workflows/: build-binaries.yml  ci.yml  deploy-docs.yml  opencode.yml  py-ci.yml  release.yml  rust-ci.yml  ts-ci.yml
.opencode/skills/spectra-dev/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VERIFICATION.md  config.json
.planning/debug/: native-bridge-failure.md
.planning/phases/01-fix-native-bridge-loading/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/01-plans/: 01-PLAN.md  01-SUMMARY.md  01-UAT.md
.planning/phases/02-plans/: 02-CONTEXT.md  02-PLAN.md  02-SUMMARY.md
.planning/phases/03-plans/: 03-CONTEXT.md  03-PLAN.md  03-SUMMARY.md
.planning/phases/04-plans/: 04-CONTEXT.md  04-PLAN.md  04-SUMMARY.md
.planning/phases/05-v0.2-production/: 05-01-PLAN.md  05-CONTEXT.md  05-PLAN.md  05-SUMMARY.md  05-UAT.md
.planning/plans/: PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/code/: .env.example  CHANGELOG.md  package.json
apps/code/src/: cli.ts  index.ts  main.ts  tools.ts  tui.ts
apps/code/src/__tests__/: code.test.ts
apps/code/src/cli/: args.ts  help.ts  index.ts  version.ts
apps/code/src/tui/: app.ts  message-list.ts  metrics-line.ts  prompt-input.ts  theme.ts  types.ts
apps/examples/: .env.example  package.json  tsconfig.json
apps/examples/src/: chat-tui-opentui.tsx  chat-tui.tsx  index.ts
crates/spectra-http/: Cargo.toml
crates/spectra-http/examples/: agent_test.rs  openrouter_test.rs
crates/spectra-http/src/: anthropic.rs  groq.rs  lib.rs  openai.rs  test.rs
crates/spectra-http/tests/: client_e2e.rs
crates/spectra-napi/: Cargo.toml  build.rs
crates/spectra-napi/src/: lib.rs
crates/spectra-pyo3/: Cargo.toml
crates/spectra-pyo3/src/: lib.rs
crates/spectra-rs/: Cargo.toml  models.toml
crates/spectra-rs/examples/: basic.rs
crates/spectra-rs/src/: agent.rs  agent_registry.rs  circuit_breaker.rs  error.rs  event.rs  extension.rs  health_probe.rs  lib.rs  llm.rs  messages.rs  models.rs  rate_limiter.rs  tool.rs  worker_pool.rs
crates/spectra-rs/tests/: agent_e2e_test.rs
docs/: PLAN.md  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: agent.md  app.md  events.md  providers.md  rust.md  tools.md
docs/concepts/: agent-loop.md  event-system.md  streaming-architecture.md  tool-dispatch.md  ts-vs-rust.md
docs/contribute/: adding-providers.md  architecture-decisions.md  coding-standards.md  setup.md
docs/getting-started/: installation.md  introduction.md  project-structure.md  quickstart.md
docs/guide/: agent.md  events.md  getting-started.md  orchestration.md  providers.md  rust.md  sessions.md  tools.md
docs/guides/: adding-a-provider.md  deployment.md  error-handling.md  multi-agent-patterns.md  prompt-engineering.md  session-management.md  streaming-ui.md  tool-design-patterns.md
docs/plans/: multimodal-input-plan.md
docs/public/: llms.txt  robots.txt
docs/recipes/: chatbot-with-sessions.md  multi-agent-research.md  rag-agent.md  rate-limited-api.md  weather-agent.md  web-search-agent.md
docs/reference/rust/: agent-builder.md  error.md  events.md  extension.md  llm-client.md  messages.md  model-registry.md  tool.md
docs/reference/typescript/: agent-registry.md  agent.md  circuit-breaker.md  define-tool.md  event-stream.md  rate-limiter.md  session-engine.md  session-manager.md  types.md  worker-pool.md
docs/rust/: agent.md  events.md  extensions.md  getting-started.md  overview.md  providers.md  tools.md
docs/troubleshooting/: common-issues.md  debugging.md  faq.md
docs/typescript/: agent.md  events.md  orchestration.md  overview.md  providers.md  sessions.md  tools.md
scripts/: build-binaries.sh  copy-native-libs.sh  install.ps1  install.sh  resolve-workspace-deps.mjs  smoke-test.sh  test-import.mjs
