[workspace]
resolver = "2"
members = [
    "packages/core",
    "crates/spectra-rs",
    "crates/spectra-napi",
    "crates/spectra-pyo3",
    "crates/spectra-http",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
