[package]
name = "spectra-napi"
version = "0.1.0"
edition = "2024"
description = "Spectra napi-rs bindings for TypeScript"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
spectra-core = { path = "../../packages/core" }
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
napi-build = "1"
