[package]
name = "spectra-napi"
version = "0.1.0"
edition = "2024"
description = "Spectra napi-rs bindings for TypeScript"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.lib]
name = "spectra_napi"

[dependencies]
spectra-core = { path = "../../packages/core" }
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "1"
