[package]
name = "spectra-napi"
version = "0.2.0"
edition = "2021"
description = "Spectra napi-rs bindings for TypeScript"
license = "MIT"

[lib]
name = "spectra_napi"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1"

[dependencies]
spectra-core = { path = "../../packages/core" }
spectra-http = { path = "../spectra-http" }
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
