[package]
name = "spectra-pyo3"
version = "0.2.0"
edition = "2021"
description = "Spectra PyO3 bindings for Python"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
spectra-core = { path = "../../packages/core" }
spectra-http = { path = "../spectra-http" }
pyo3 = { version = "0.24" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
pyo3-build-config = "0.24"

[env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"
